--- a/.themes/classic/source/_includes/custom/head.html
+++ b/.themes/classic/source/_includes/custom/head.html
@@ -3,3 +3,166 @@
 <link href="http://fonts.googleapis.com/css?family=Droid+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
 <meta property="og:image" content="http://c15162226.r26.cf2.rackcdn.com/Rackspace_Cloud_Company_Logo_clr_600x218.jpg" />
 <link rel="image_src" href="http://c15162226.r26.cf2.rackcdn.com/Rackspace_Cloud_Company_Logo_clr_600x218.jpg">
+<style type="text/css">
+
+#head-wrap {
+	position: relative;
+	left: 0px;
+	width: 100%;
+	height: 60px;
+	background: #000000;
+}
+.container_12 {
+	position: relative;
+	top: 0px;
+	left: 0px;
+	width: 960px;
+	margin: 0px auto;
+	text-align: left;
+	background: #000000;
+	border-bottom: 0px;
+}
+
+#eyebrow-wrap {
+	top: 0px;
+	background-color: #000000;
+}
+
+#eyebrow-wrap #pocket-wrap {
+	position: relative;
+	top: 0px;
+	height: 40px;
+	float: right;
+}
+#eyebrow-wrap .pocketitem {
+	display: inline;
+}
+#eyebrow-wrap .eyebrowitem {
+	position: relative;
+	top: 15px;
+	padding: 0px 30px 0px 0px;
+	font-size: 12px;
+	font-family: "Droid Sans", Helvetica, Arial, san-serif;
+	color: #FFFFFF;
+	background-color: #000000;
+	float: left;
+}
+#eyebrow-wrap a {
+	color: #FFFFFF;
+	text-decoration: none;
+}
+#eyebrow-wrap a:hover {
+	text-decoration: underline;
+}
+
+#eyebrow-wrap #eyebrow-logo {
+	top: 8px;
+}
+#eyebrow-wrap #eyebrow-logo a.logo {
+	height: 31px;
+	width: 108px;
+	background: url(images/logo-rackspace.png);
+	display: block;
+}
+#eyebrow-wrap #eyebrow-customerlogin {
+	position: relative;
+	float: left;
+}
+#eyebrow-wrap #eyebrow-customerlogin {
+	z-index: 70;
+}
+#eyebrow-wrap .pocketbutton {
+	position: relative;
+	top: 3px;
+	border-radius: 0.15em;
+	text-shadow: 0 1px 0 #333;
+	text-decoration: none;
+	color: #fff;
+	font-size: 12px;
+	font-family: "Droid Sans", Helvetica, Arial, san-serif;
+	background: #5c5c5c;
+	background: -moz-linear-gradient(top, #6c6c6c 0%, #5c5c5c 100%);
+	background: -webkit-linear-gradient(top, #6c6c6c 0%,#5c5c5c 100%);
+	background: -o-linear-gradient(top, #6c6c6c 0%, #5c5c5c 100%);
+	background: -ms-linear-gradient(top, #6c6c6c 0%, #5c5c5c 100%);
+	background: linear-gradient(to bottom, #6c6c6c 0%, #5c5c5c 100%);
+	padding: 6px 10px;
+	margin: 3px 5px 0 5px;
+	cursor: pointer;
+	float: left;
+}
+#eyebrow-wrap .pocketbutton:hover {
+	background: #7c7c7c;
+	background: -moz-linear-gradient(top, #8c8c8c 0%, #7c7c7c 100%);
+	background: -webkit-linear-gradient(top, #8c8c8c 0%,#7c7c7c 100%);
+	background: -o-linear-gradient(top, #8c8c8c 0%, #7c7c7c 100%);
+	background: -ms-linear-gradient(top, #8c8c8c 0%, #7c7c7c 100%);
+	background: linear-gradient(to bottom, #8c8c8c 0%, #7c7c7c 100%);
+	text-decoration: none;
+}
+#eyebrow-wrap .pocketbutton.dropdown {
+	background: url(images/arrow-pocketbutton_dropdown.png) no-repeat right center #5c5c5c;
+	background: url(images/arrow-pocketbutton_dropdown.png) no-repeat right center, -moz-linear-gradient(top, #6c6c6c 0%, #5c5c5c 100%);
+	background: url(images/arrow-pocketbutton_dropdown.png) no-repeat right center, -webkit-linear-gradient(top, #6c6c6c 0%,#5c5c5c 100%);
+	background: url(images/arrow-pocketbutton_dropdown.png) no-repeat right center, -o-linear-gradient(top, #6c6c6c 0%, #5c5c5c 100%);
+	background: url(images/arrow-pocketbutton_dropdown.png) no-repeat right center, -ms-linear-gradient(top, #6c6c6c 0%, #5c5c5c 100%);
+	background: url(images/arrow-pocketbutton_dropdown.png) no-repeat right center, linear-gradient(to bottom, #6c6c6c 0%, #5c5c5c 100%);
+	padding: 6px 20px 6px 10px;
+}
+#eyebrow-wrap .pocketbutton.dropdown:hover {
+	background: url(images/arrow-pocketbutton_dropdown.png) no-repeat right center #7c7c7c;
+	background: url(images/arrow-pocketbutton_dropdown.png) no-repeat right center, -moz-linear-gradient(top, #8c8c8c 0%, #7c7c7c 100%);
+	background: url(images/arrow-pocketbutton_dropdown.png) no-repeat right center, -webkit-linear-gradient(top, #8c8c8c 0%,#7c7c7c 100%);
+	background: url(images/arrow-pocketbutton_dropdown.png) no-repeat right center, -o-linear-gradient(top, #8c8c8c 0%, #7c7c7c 100%);
+	background: url(images/arrow-pocketbutton_dropdown.png) no-repeat right center, -ms-linear-gradient(top, #8c8c8c 0%, #7c7c7c 100%);
+	background: url(images/arrow-pocketbutton_dropdown.png) no-repeat right center, linear-gradient(to bottom, #8c8c8c 0%, #7c7c7c 100%);
+	padding: 6px 20px 6px 10px;
+}
+#eyebrow-wrap .pocketitem ul {
+	position: absolute;
+	right: 0;
+	top: 28px;
+	padding: 0px;
+	margin: 0px;
+	background: #555555;
+	border-top: 0px solid #1a1a1a;
+	list-style-type: none;
+	display: none;
+}
+#eyebrow-wrap #eyebrow-customerlogin ul li {
+	padding: 0px 6px;
+	white-space: nowrap;
+	cursor: pointer;
+}
+#eyebrow-wrap #eyebrow-customerlogin ul li {
+	padding: 3px 6px;
+}
+#eyebrow-wrap #eyebrow-customerlogin ul li:hover {
+	background: #777777;
+}
+#eyebrow-wrap #eyebrow-customerlogin ul li a {
+	position: relative;
+	padding: 3px 0;
+	color: #FFF;
+	cursor: pointer;
+	display: block;
+	margin-left: 26px;
+	text-decoration: none;
+}
+#eyebrow-wrap #eyebrow-customerlogin ul li .new {
+	background: #C40022;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	border-radius: 2px;	
+	padding: 3px 6px 2px 5px;
+	margin-left: 4px;
+	color: #FFF;
+	font-size: 10px;
+	line-height: 2px;
+	text-transform: uppercase;
+}
+#eyebrow-wrap #eyebrow-customerlogin ul li a:hover {
+	text-decoration: none;
+}
+
+</style>
