--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -53,8 +53,8 @@ body {
       }
   }
 }
-$main-bg: #ffffff !default;
-$page-bg: #ffffff !default;
+$main-bg: #fff !default;
+$page-bg: #fff !default;
 $header-bg: #fff;
 $title-color: #000000 !default;
 $text-color: #333 !default;
