--- a/source/_includes/custom/eyebrow.html
+++ b/source/_includes/custom/eyebrow.html
@@ -6,10 +6,10 @@
 			
 			<div id="eyebrow-logo" class="eyebrowitem"><a class="logo" href="http://www.rackspace.com"></a></div>
 			
-			<div id="eyebrow-hosting" class="eyebrowitem"><a href="http://www.rackspace.com/cloud/">Cloud Hosting</a></div>
-			<div id="eyebrow-hosting" class="eyebrowitem"><a href="http://www.rackspace.com/managed_hosting/">Managed Hosting</a></div>	
-			<div id="eyebrow-hosting" class="eyebrowitem"><a href="http://www.rackspace.com/apps/">Email &amp; Apps</a></div>
-			<div id="eyebrow-about" class="eyebrowitem"><a href="http://www.rackspace.com/information/aboutus">Company</a></div>
+			<div id="eyebrow-hosting" class="eyebrowitem"><a href="http://developer.rackspace.com/">Developer Center</a></div>
+			<div id="eyebrow-hosting" class="eyebrowitem"><a href="https://community.rackspace.com/developers/default">Developer Community</a></div>
+			<div id="eyebrow-hosting" class="eyebrowitem"><a href="http://launch.rackspace.com">Launch Guide</a></div>	
+			<div id="eyebrow-hosting" class="eyebrowitem"><a href="http://www.rackspace.com/events/">Events</a></div>
 			
 			<div id="pocket-wrap">
 				<div id="eyebrow-signup" class="pocketitem">
