--- a/.themes/classic/source/_includes/custom/head.html
+++ b/.themes/classic/source/_includes/custom/head.html
@@ -19,18 +19,12 @@
 	width: 960px;
 	margin: 0px auto;
 	text-align: left;
-	background: #000000;
 	border-bottom: 0px;
-}
-
-#eyebrow-wrap {
-	top: 0px;
-	background-color: #000000;
 }
 
 #eyebrow-wrap #pocket-wrap {
 	position: relative;
-	top: 0px;
+	top: 5px;
 	height: 40px;
 	float: right;
 }
@@ -40,11 +34,10 @@
 #eyebrow-wrap .eyebrowitem {
 	position: relative;
 	top: 15px;
-	padding: 0px 30px 0px 0px;
+	padding: 8px 30px 0px 0px;
 	font-size: 12px;
 	font-family: "Droid Sans", Helvetica, Arial, san-serif;
 	color: #FFFFFF;
-	background-color: #000000;
 	float: left;
 }
 #eyebrow-wrap a {
@@ -73,7 +66,7 @@
 }
 #eyebrow-wrap .pocketbutton {
 	position: relative;
-	top: 3px;
+	top: 0px;
 	border-radius: 0.15em;
 	text-shadow: 0 1px 0 #333;
 	text-decoration: none;
@@ -122,15 +115,15 @@
 	position: absolute;
 	right: 0;
 	top: 28px;
-	padding: 0px;
+	padding: 2px;
 	margin: 0px;
 	background: #555555;
-	border-top: 0px solid #1a1a1a;
+	border-top: 1px solid #1a1a1a;
 	list-style-type: none;
 	display: none;
 }
 #eyebrow-wrap #eyebrow-customerlogin ul li {
-	padding: 0px 6px;
+	padding: 1px 6px;
 	white-space: nowrap;
 	cursor: pointer;
 }
@@ -165,4 +158,7 @@
 	text-decoration: none;
 }
 
+@media only screen and (max-width: 479px){
+	#head-wrap .container_12 { display: none; }
+}
 </style>
