Adding .NET SDK to sidebar

--- a/.themes/classic/source/_includes/custom/asides/github_small.html
+++ b/.themes/classic/source/_includes/custom/asides/github_small.html
@@ -22,6 +22,10 @@
       <p>Ruby SDK</p>
     </li>
     <li>
+      <a href="https://github.com/rackspace/openstack.net">openstack.net</a>
+      <p>Microsoft .NET SDK</p>
+    </li>
+    <li>
       <a href="https://github.com/rackerlabs/repose">repose</a>
       <p>The REstful PrOxy Service Engine - an open-source platform that you can use to build stacks of reusable software components.</p>
     </li>
